@@ -28,6 +28,19 @@ debian/tmp/share: debian/tmp
 
 makebuilddir/$(PACKAGE):: debian/tmp/bin debian/tmp/etc debian/tmp/share
 
+# Generation of man pages
+SCRIPTS       := $(wildcard bin/mh_*)
+MAN_PAGES     := $(addprefix debian/tmp/doc/,$(addsuffix .1, $(notdir $(SCRIPTS))))
+debian/tmp/mh_% : bin/mh_%
+	mkdir -p debian/tmp
+	cp $< $@
+	chmod +x $@
+debian/tmp/doc/mh_%.1 : debian/tmp/mh_% 
+	mkdir -p debian/tmp/doc
+	help2man -N -o $@ $<
+man-pages: $(MAN_PAGES)
+build/$(PACKAGE):: man-pages
+
 install/$(PACKAGE)::
 	mh_installpoms -p$(PACKAGE)
 	mh_installjar -p$(PACKAGE) -l maven-debian-helper/pom.xml maven-debian-helper/target/maven-debian-helper-$(VERSION).jar
@@ -36,6 +49,7 @@ install/$(PACKAGE)::
 	pod2man -c 'Maven for Debian GNU/Linux' \
 	  -r maven-debian-helper-$(DEB_UPSTREAM_VERSION) \
 	  man/mvn-debian.pod > man/mvn-debian.1
+	dh_installman $(MAN_PAGES) man/mvn-debian.1
 
 clean::
 	-rm -rf debian/tmp
