@@ -1,5 +1,3 @@
-asm asm /usr/share/java/asm2.jar 2.x
-bcel bcel
 commons-el commons-el
 dom4j dom4j
 easymock easymock
@@ -13,11 +11,8 @@ jaxen jaxen
 jboss.common jboss-common
 jmock jmock
 junit junit4 /usr/share/java/junit4.jar 4.x
-org.antlr antlr
 org.apache.geronimo.specs specs
 org.apache.ws.jaxme jaxmeapi
-org.codehaus.groovy groovy
-org.codehaus.mojo mojo
 org.codehaus.woodstox wstx-asl /usr/share/java/wstx.jar
 org.eclipse.jdt core /usr/share/java/ecj.jar
 org.jboss jboss-common-core /usr/share/java/jboss-common.jar
@@ -25,8 +20,4 @@ org.jboss jbossxb /usr/share/java/jboss-xml-binding.jar
 org.jboss.microcontainer jboss-dependency /usr/share/java/jboss-microcontainer.jar
 org.jboss.microcontainer jboss-microcontainer
 org.jboss.ws jbossws-parent
-regexp regexp
-tomcat jasper-compiler /usr/share/tomcat5.5/common/lib/jasper-compiler.jar
-tomcat jasper-compiler-jdt /usr/share/tomcat5.5/common/lib/jasper-compiler-jdt.jar
-tomcat jasper-runtime /usr/share/tomcat5.5/common/lib/jasper-runtime.jar
 
