@@ -3,11 +3,11 @@
 #macro(printDependencies $dependencies)
 #set ($lineLength=0)
 #foreach ($dependency in $dependencies)
-#if($lineLength==0)${space}#end${dependency}#if($velocityCount<$dependencies.size()), #else
+#if($lineLength==0)${space}#end${dependency}#if($velocityCount<$dependencies.size()), #elseif ($velocityHasNext)
 $space
 #end
 #set ($lineLength = $lineLength + $dependency.length() + 2)
-#if ($lineLength > 70)
+#if ($lineLength > 70 && $velocityHasNext)
 $space
 #set ($lineLength=0)
 #end
@@ -20,7 +20,7 @@ Maintainer: Debian Java Maintainers <pkg-java-maintainers@lists.alioth.debian.or
 Uploaders: ${packager} <${packagerEmail}>
 Build-Depends: debhelper (>= 7), cdbs, default-jdk, ant-optional, maven-ant-helper (>> 4)
 Build-Depends-Indep: maven-repo-helper,
-#printDependencies($compileDependencies)
+#printDependencies($compileDependencies)$space
 Standards-Version: 3.8.2
 Vcs-Svn: svn://svn.debian.org/svn/pkg-java/trunk/${package}
 Vcs-Browser: http://svn.debian.org/wsvn/pkg-java/trunk/${package}/
@@ -52,12 +52,13 @@ Description: ${project.Name}
 Package: ${binPackage}-doc
 Architecture: all
 Section: doc
-Depends: ${dollar}{misc:Depends}
+Depends: ${dollar}{misc:Depends}, ${dollar}{maven:DocDepends}
+Recommends: ${dollar}{maven:DocOptionalDepends}
 Suggests: ${binPackage}
 Description: Documentation for ${project.Name}
-#if ($description.isEmpty()) TODO - fill the description #else $description.get(0) #end
+#if ($description.isEmpty()) TODO - fill the description
+#else
 #foreach ($line in $description)
-#if ($velocityCount > 1)
 #if ($line == "")
  .
 #else
