@@ -6,5 +6,5 @@ Abstract: This is the API Javadoc provided for the
 Section: Programming
 
 Format: HTML
-Index: /usr/share/doc/${binPackage}-doc/api/index.html
-Files: /usr/share/doc/${binPackage}-doc/api/*
+Index: /usr/share/doc/${binPackage}/api/index.html
+Files: /usr/share/doc/${binPackage}/api/*
