@@ -6,7 +6,7 @@ DIR=${package}-$VERSION
 TAG=$(echo "${tagMarker}$VERSION" | sed -re's/~(alpha|beta)/-\1-/')
 
 svn export ${baseUrl}/${TAG}${suffixUrl} $DIR
-tar -c -z -f $TAR $DIR
+GZIP=--best tar -c -z -f $TAR --exclude '*.jar' --exclude '*.class' $DIR
 rm -rf $DIR ../$TAG
 
 # move to directory 'tarballs'
